--- a/styles/style.css
+++ b/styles/style.css
@@ -156,6 +156,9 @@
 .footer {
   height: 100vh;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Шрифты */
