--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,6 +9,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --basic-pink: #ff0070;
   --page-bg-color: var(--approximately-black);
   --accent-color: var(--real-red);
   --title-color: #db00ff;
@@ -31,6 +32,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --basic-pink: #ff0070;
     --page-bg-color: var(--approximately-black);
     --accent-color: var(--real-red);
     --title-color: #db00ff;
