--- a/styles/light.css
+++ b/styles/light.css
@@ -9,6 +9,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --basic-pink: #ff8dcb;
   --accent-color: var(--basic-pink);
   --title-color: var(--title-pink);
   --page-bg-color: var(--almost-white-bg);
@@ -30,6 +31,7 @@
 
 @media (prefers-color-scheme: light) {
   :root {
+    --basic-pink: #ff8dcb;
     --accent-color: var(--basic-pink);
     --title-color: var(--title-pink);
     --page-bg-color: var(--almost-white-bg);
